Raise loading builtin function [Bug #17192]